# tradeiros-ptyhon

./: .gitignore  README.md  pyproject.toml  requirements.txt
dash/: dashboard.py
src/tradeiros/: ExchangeBase.py  Tradeiros.py  __init__.py
src/tradeiros/bitget/: bitget.py
src/tradeiros/bybit/: bybit.py
src/tradeiros/okx/: okx.py
tests/: __init__.py  test_bitget.py  test_okx.py  test_tradeiros.py
