[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeiros"
version = "0.1.3a0"
description = "Biblioteca para visualização de ordens da comunidade Tradeiros Hedge Pro."
readme = "README.md"
authors = [
    { name = "Dennis Rosa", email = "denni.rosa@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "hedge", "okx", "bitget", "bybit", "crypto"]
dependencies = [
    "pandas",
    "python-dotenv",
    "python-okx >= 0.4.1",
    "ccxt"
]

[project.urls]
"Homepage" = "https://tradeiros.com.br"
"Bug Tracker" = "https://github.com/dennisrosa/tradeiros-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine"
]
